# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")
import("//foundation/ability/ability_runtime/services/dataobsmgr/dataobsms.gni")

group("dataobsms_target") {
  deps = [ ":dataobsms" ]
}

config("dataobsms_config") {
  include_dirs = [
    "include/",
    "${ability_runtime_services_path}/common/include",
    "//third_party/json/include",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("dataobsms") {
  shlib_type = "sa"
  sources = dataobsms_files

  configs = [ ":dataobsms_config" ]

  deps = [ "${ability_runtime_innerkits_path}/dataobs_manager:dataobs_manager" ]

  external_deps = [
    "ability_base:zuri",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "ability"
  part_name = "ability_runtime"
}

# Note: Just for test
ohos_static_library("dataobsms_static") {
  sources = dataobsms_files

  configs = [ ":dataobsms_config" ]

  deps = [ "${ability_runtime_innerkits_path}/dataobs_manager:dataobs_manager" ]

  external_deps = [
    "ability_base:zuri",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "ability"
  part_name = "ability_runtime"
}
